--- a/web/src/components/Leaderboard.module.css
+++ b/web/src/components/Leaderboard.module.css
@@ -1,8 +1,8 @@
 .panel {
+  position: absolute;
+  inset: 0;
   display: flex;
   flex-direction: column;
-  flex: 1;
-  min-height: 0;
 }
 
 .body {
